--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [project]
 name = "logsentinel"
-version = "0.1.0"
+version = "0.1.01"
 description = "AI-powered log monitoring SDK for Python applications"
 readme = "README.md"
 requires-python = ">=3.9"
+license = { text = "MIT" }
 authors = [
     { name = "Jeckonia Kwasa", email = "inctifra@gmail.com" }
 ]
@@ -18,9 +19,11 @@ dependencies = [
 ]
 
 [build-system]
-requires = ["setuptools>=65", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["logosentinel"]
 
 [project.urls]
 Homepage = "https://github.com/inctifra/logsentinel"
